# leptos_islands

./: Cargo.toml  package-lock.json  package.json  tailwind.config.js
src/: components.rs  errors.rs  lib.rs  main.rs  mod.rs  models.rs
src/components/: dashboard_chart.rs  dashboard_header.rs  dashboard_widget.rs  header.rs  toast.rs
src/errors/: person_errors.rs
src/models/: person.rs
src/pages/: home_page.rs  team_page.rs
style/output/: output.css
